Support add torrent from file
