# torrent/src/http/openapi_generated_api.go
@@ -1,6 +1,6 @@
 // Package http provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package http
 
 import (
@@ -21,7 +21,7 @@ type ServerInterface interface {
 	ListTorrents(w http.ResponseWriter, r *http.Request)
 	// Add torrent
 	// (POST /torrents)
-	AddTorrent(w http.ResponseWriter, r *http.Request, params AddTorrentParams)
+	AddTorrent(w http.ResponseWriter, r *http.Request)
 	// Get torrent stats
 	// (GET /torrents/{infoHash}/files/{fileIndex}/stats)
 	GetTorrentStats(w http.ResponseWriter, r *http.Request, infoHash InfoHash, fileIndex FileIndex)
@@ -48,7 +48,7 @@ func (_ Unimplemented) ListTorrents(w http.ResponseWriter, r *http.Request) {
 
 // Add torrent
 // (POST /torrents)
-func (_ Unimplemented) AddTorrent(w http.ResponseWriter, r *http.Request, params AddTorrentParams) {
+func (_ Unimplemented) AddTorrent(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -75,7 +75,6 @@ type MiddlewareFunc func(http.Handler) http.Handler
 
 // DropAllTorrents operation middleware
 func (siw *ServerInterfaceWrapper) DropAllTorrents(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
@@ -98,12 +97,11 @@ func (siw *ServerInterfaceWrapper) DropAllTorrents(w http.ResponseWriter, r *htt
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // ListTorrents operation middleware
 func (siw *ServerInterfaceWrapper) ListTorrents(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.ListTorrents(w, r)
@@ -113,55 +111,32 @@ func (siw *ServerInterfaceWrapper) ListTorrents(w http.ResponseWriter, r *http.R
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // AddTorrent operation middleware
 func (siw *ServerInterfaceWrapper) AddTorrent(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params AddTorrentParams
-
-	// ------------- Optional query parameter "dropOthers" -------------
-
-	err = runtime.BindQueryParameter("form", true, false, "dropOthers", r.URL.Query(), &params.DropOthers)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "dropOthers", Err: err})
-		return
-	}
-
-	// ------------- Optional query parameter "deleteOthers" -------------
-
-	err = runtime.BindQueryParameter("form", true, false, "deleteOthers", r.URL.Query(), &params.DeleteOthers)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "deleteOthers", Err: err})
-		return
-	}
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AddTorrent(w, r, params)
+		siw.Handler.AddTorrent(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // GetTorrentStats operation middleware
 func (siw *ServerInterfaceWrapper) GetTorrentStats(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -170,7 +145,7 @@ func (siw *ServerInterfaceWrapper) GetTorrentStats(w http.ResponseWriter, r *htt
 	// ------------- Path parameter "fileIndex" -------------
 	var fileIndex FileIndex
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "fileIndex", runtime.ParamLocationPath, chi.URLParam(r, "fileIndex"), &fileIndex)
+	err = runtime.BindStyledParameterWithOptions("simple", "fileIndex", chi.URLParam(r, "fileIndex"), &fileIndex, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileIndex", Err: err})
 		return
@@ -184,19 +159,18 @@ func (siw *ServerInterfaceWrapper) GetTorrentStats(w http.ResponseWriter, r *htt
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // StreamFile operation middleware
 func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -205,7 +179,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "fileIndex" -------------
 	var fileIndex FileIndex
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "fileIndex", runtime.ParamLocationPath, chi.URLParam(r, "fileIndex"), &fileIndex)
+	err = runtime.BindStyledParameterWithOptions("simple", "fileIndex", chi.URLParam(r, "fileIndex"), &fileIndex, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileIndex", Err: err})
 		return
@@ -214,7 +188,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "fileName" -------------
 	var fileName FileName
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "fileName", runtime.ParamLocationPath, chi.URLParam(r, "fileName"), &fileName)
+	err = runtime.BindStyledParameterWithOptions("simple", "fileName", chi.URLParam(r, "fileName"), &fileName, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileName", Err: err})
 		return
@@ -228,7 +202,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 type UnescapedCookieParamError struct {
