# torrent/src/http/openapi_generated_types.go
@@ -1,6 +1,6 @@
 // Package http provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package http
 
 // File defines model for File.
@@ -67,17 +67,8 @@ type DropAllTorrentsParams struct {
 
 // AddTorrentJSONBody defines parameters for AddTorrent.
 type AddTorrentJSONBody struct {
-	// Link Torrent link or magnet
-	Link string `json:"link"`
-}
-
-// AddTorrentParams defines parameters for AddTorrent.
-type AddTorrentParams struct {
-	// DropOthers Drop other torrents
-	DropOthers *bool `form:"dropOthers,omitempty" json:"dropOthers,omitempty"`
-
-	// DeleteOthers Delete other torrents
-	DeleteOthers *bool `form:"deleteOthers,omitempty" json:"deleteOthers,omitempty"`
+	// Content Torrent link or magnet or torrent file content
+	Content string `json:"content"`
 }
 
 // AddTorrentJSONRequestBody defines body for AddTorrent for application/json ContentType.
